log
mi., 15 de feb. de 2023 12:35:23: 
 tests:  0|6
total_score: 0/70
7964391
Thu 30 Mar 2023 09:49:26 PM UTC: 
 arraylist.c | 0
 1 file changed, 0 insertions(+), 0 deletions(-)
 tests:  0|6
total_score: 0/70
88b5d41
Thu 30 Mar 2023 09:50:21 PM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
arraylist.c: In function ‘createList’:
arraylist.c:14:14: error: unused variable ‘list’ [-Werror=unused-variable]
   14 |   ArrayList *list = (ArrayList*) malloc(sizeof(ArrayList));
      |              ^~~~
cc1: all warnings being treated as errors
Compilation failed
39eb59e
Thu 30 Mar 2023 09:50:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
dc2b2cd
Thu 30 Mar 2023 09:52:31 PM UTC: 
 arraylist.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  0|6
total_score: 0/70
7a3f7b0
Thu 30 Mar 2023 09:53:49 PM UTC: 
 arraylist.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
1e1d427
Thu 30 Mar 2023 10:04:32 PM UTC: 
 arraylist.c | 21 +++++++++++++--------
 1 file changed, 13 insertions(+), 8 deletions(-)
In file included from test.c:5:
arraylist.c:34:5: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ before ‘->’ token
   34 | list->data[list->size] = data;
      |     ^~
Compilation failed
7a7c6c0
Thu 30 Mar 2023 10:05:32 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
9fc0231
Fri 31 Mar 2023 12:41:20 AM UTC: 
 arraylist.c | 9 ++++++++-
 1 file changed, 8 insertions(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘push’:
arraylist.c:42:83: error: expected ‘;’ before ‘if’
   42 |     list->data = (void**)realloc(list->data, (2 * list->capacity) * sizeof(void*))
      |                                                                                   ^
      |                                                                                   ;
   43 |       if (list->data == NULL) return;
      |       ~~                                                                           
Compilation failed
0d30f68
Fri 31 Mar 2023 12:42:38 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 20/70
a0980e0
Fri 31 Mar 2023 12:53:04 AM UTC: 
 arraylist.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 30/70
9bdfa45
Fri 31 Mar 2023 03:10:59 AM UTC: 
 arraylist.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
03e2ce0
Fri 31 Mar 2023 03:16:46 AM UTC: 
 arraylist.c | 10 ++++++++--
 1 file changed, 8 insertions(+), 2 deletions(-)
 tests:  7|3
total_score: 30/70
18ae17b
Fri 31 Mar 2023 03:18:02 AM UTC: 
 arraylist.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  7|3
total_score: 30/70
a6b923b
Fri 31 Mar 2023 03:28:14 AM UTC: 
 arraylist.c | 20 +++++---------------
 1 file changed, 5 insertions(+), 15 deletions(-)
 tests:  5|3
total_score: 30/70
d930de9
Fri 31 Mar 2023 03:33:59 AM UTC: 
 arraylist.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
 tests:  5|3
total_score: 30/70
6169973
Fri 31 Mar 2023 03:39:53 AM UTC: 
 arraylist.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘pop’:
arraylist.c:54:7: error: ‘aux’ may be used uninitialized in this function [-Werror=maybe-uninitialized]
   54 |   int aux;
      |       ^~~
cc1: all warnings being treated as errors
Compilation failed
c3767bf
Fri 31 Mar 2023 03:40:25 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 30/70
385465a
Fri 31 Mar 2023 03:40:42 AM UTC: 
 arraylist.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  6|3
total_score: 30/70
26f1e5f
Fri 31 Mar 2023 03:47:14 AM UTC: 
 arraylist.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  6|3
total_score: 30/70
e9dd54c
Fri 31 Mar 2023 03:49:42 AM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  6|3
total_score: 30/70
8e5e2e1
Fri 31 Mar 2023 03:54:12 AM UTC: 
 arraylist.c | 12 ++++--------
 1 file changed, 4 insertions(+), 8 deletions(-)
 tests:  6|3
total_score: 30/70
550101e
Fri 31 Mar 2023 03:54:41 AM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
552b869
Fri 31 Mar 2023 06:28:10 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
baabc89
Fri 31 Mar 2023 06:30:15 PM UTC: 
 arraylist.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  7|3
total_score: 30/70
370e535
Fri 31 Mar 2023 06:30:34 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:72:23: error: ‘aux’ undeclared (first use in this function)
   72 |     return list->data[aux];
      |                       ^~~
arraylist.c:72:23: note: each undeclared identifier is reported only once for each function it appears in
arraylist.c:73:1: error: control reaches end of non-void function [-Werror=return-type]
   73 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
a5b7dcd
Fri 31 Mar 2023 06:31:00 PM UTC: 
 arraylist.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  7|3
total_score: 30/70
334c80e
Fri 31 Mar 2023 06:33:57 PM UTC: 
 arraylist.c | 11 ++++-------
 1 file changed, 4 insertions(+), 7 deletions(-)
In file included from test.c:5:
arraylist.c: In function ‘get’:
arraylist.c:70:23: error: expected ‘;’ before ‘}’ token
   70 |   return list->data[i]
      |                       ^
      |                       ;
   71 | }
      | ~                      
Compilation failed
1782317
Fri 31 Mar 2023 06:34:04 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
5188fb3
Fri 31 Mar 2023 06:34:23 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  6|3
total_score: 30/70
cf9c237
Fri 31 Mar 2023 06:38:02 PM UTC: 
 arraylist.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  9|2
total_score: 40/70
9b47912
Fri 31 Mar 2023 06:43:25 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
e05170a
Fri 31 Mar 2023 06:44:02 PM UTC: 
 arraylist.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|2
total_score: 40/70
8103884
Fri 31 Mar 2023 06:45:27 PM UTC: 
 arraylist.c | 13 ++-----------
 1 file changed, 2 insertions(+), 11 deletions(-)
 tests:  8|2
total_score: 40/70
eb0bba7
Fri 31 Mar 2023 06:48:50 PM UTC: 
 arraylist.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  8|2
total_score: 40/70
387d3f2
